--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "lodash": "^4.17.11",
     "mongoose": "^5.5.0",
     "multer": "^1.4.1",
+    "nodemon": "^1.19.1",
     "validator": "^10.11.0",
     "winston": "^2.4.4",
     "winston-mongodb": "^3.0.2"
